--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nasa's Astronomical Picture of the Day</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
 <body>
     <main>
     <header>
@@ -27,3 +36,7 @@
     <script src="app.js"></script> 
 
 </body>
+
+</html>
+
+
