--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Nasa's Astronomical Picture of the Day</h1>
 
     <form >
-    <label for="datepiceker">Pick a date:
+    <label for="datepicker" class="datepicker">Pick a date: 
     <input id="datepicker" type="date" min="" max="" > 
     </label>
     </form>
