alteracoes no background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <div class="titulo-imagem">
                 <h1>Nasa's Astronomical Picture of the Day</h1>
-                <img  class="telescopio" src="./assets/Telescope.svg">
+                <img  class="telescopio" src="./assets/Planet-1.png">
             </div>
             <form>
                 <label for="datepicker" class="datepicker">Pick a date:
