--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <header>
             <div class="titulo-imagem">
-                <h1>Nasa's Astronomical Picture of the Day</h1>
+                <h1>NASA'S ASTRONOMICAL PICTURE OF THE DAY</h1>
                 <img  class="telescopio" src="./assets/Planet-1.png">
             </div>
             <form>
@@ -25,7 +25,7 @@
                 </label>
             </form>
 
-            <hr style="color: white; width: 60vw;">
+            
         </header>
 
         <section class="title-section">
